# just-init

./: .gitignore  .justfile  Cargo.toml  LICENSE  readme.md
examples/: .justfile
examples/cpp_project/input/{{project_name}}/: CMakeLists.txt  main.cpp
examples/single_file/: data.json
examples/single_file/input/: source.txt
examples/single_path/: data.json
src/: args.rs  data.rs  engine.rs  generator.rs  lib.rs  main.rs  output.rs  source.rs
tests/: cli.rs
