[package]
name = "just-init"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
tera = "1.20.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"